feat(miner): implement new mining task handling and difficulty adjustment
- Add CurrentMiningTaskService to manage current mining task
- Implement DifficultyService to adjust mining difficulty
- Update BlockService to use new task and difficulty services
- Add MiningTaskNotifier to send mining task updates
- Implement QueueAdminService to purge blocks queue
- Update BlockController to handle new mining result validation